--- a/AutoInsuranceQuote/Web.config
+++ b/AutoInsuranceQuote/Web.config
@@ -63,6 +63,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AutoInsuranceQuoteEntities" connectionString="metadata=res://*/AutoInsuranceQuote.csdl|res://*/AutoInsuranceQuote.ssdl|res://*/AutoInsuranceQuote.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoInsuranceQuote;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AutoInsuranceQuoteEntities" connectionString="metadata=res://*/Models.AutoInsuranceQuote.csdl|res://*/Models.AutoInsuranceQuote.ssdl|res://*/Models.AutoInsuranceQuote.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoInsuranceQuote;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
