--- a/AutoInsuranceQuote/AutoInsuranceQuote.csproj
+++ b/AutoInsuranceQuote/AutoInsuranceQuote.csproj
@@ -128,22 +128,22 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="AutoInsuranceQuote.Context.cs">
+    <Compile Include="Models\AutoInsuranceQuote.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AutoInsuranceQuote.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="AutoInsuranceQuote.cs">
+    <Compile Include="Models\AutoInsuranceQuote.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AutoInsuranceQuote.tt</DependentUpon>
     </Compile>
-    <Compile Include="AutoInsuranceQuote.Designer.cs">
+    <Compile Include="Models\AutoInsuranceQuote.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AutoInsuranceQuote.edmx</DependentUpon>
     </Compile>
-    <Compile Include="AutoQuote.cs">
+    <Compile Include="Models\AutoQuote.cs">
       <DependentUpon>AutoInsuranceQuote.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AdminController.cs" />
@@ -151,17 +151,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AutoQuote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AutoQuoteVM.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AutoInsuranceQuote.Context.tt">
+    <Content Include="Models\AutoInsuranceQuote.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>AutoInsuranceQuote.edmx</DependentUpon>
       <LastGenOutput>AutoInsuranceQuote.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="AutoInsuranceQuote.tt">
+    <Content Include="Models\AutoInsuranceQuote.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>AutoInsuranceQuote.edmx</DependentUpon>
       <LastGenOutput>AutoInsuranceQuote.cs</LastGenOutput>
@@ -197,11 +196,11 @@
     <Content Include="Scripts\esm\popper.js.map" />
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
-    <EntityDeploy Include="AutoInsuranceQuote.edmx">
+    <EntityDeploy Include="Models\AutoInsuranceQuote.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>AutoInsuranceQuote.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="AutoInsuranceQuote.edmx.diagram">
+    <Content Include="Models\AutoInsuranceQuote.edmx.diagram">
       <DependentUpon>AutoInsuranceQuote.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
